Fixes for bugs pointed by firebugs