@@ -10,33 +10,33 @@ public class TypeUtilsTest
 	@Test
 	public void testValueOf()
 	{
-		assertEquals(new Byte((byte) 0), valueOf(null, byte.class, "0"));
-		assertEquals(new Byte((byte) 10), valueOf("10", byte.class, "0"));
-		assertEquals(new Byte((byte) -10), valueOf("-10", byte.class, "0"));
-		assertEquals(new Byte((byte) 0), valueOf(null, Byte.class, "0"));
-		assertEquals(new Byte((byte) 10), valueOf("10", Byte.class, "0"));
-		assertEquals(new Byte((byte) -10), valueOf("-10", Byte.class, "0"));
+		assertEquals(Byte.valueOf((byte) 0), valueOf(null, byte.class, "0"));
+		assertEquals(Byte.valueOf((byte) 10), valueOf("10", byte.class, "0"));
+		assertEquals(Byte.valueOf((byte) -10), valueOf("-10", byte.class, "0"));
+		assertEquals(Byte.valueOf((byte) 0), valueOf(null, Byte.class, "0"));
+		assertEquals(Byte.valueOf((byte) 10), valueOf("10", Byte.class, "0"));
+		assertEquals(Byte.valueOf((byte) -10), valueOf("-10", Byte.class, "0"));
 		
-		assertEquals(new Short((short) 0), valueOf(null, short.class, "0"));
-		assertEquals(new Short((short) 10), valueOf("10", short.class, "0"));
-		assertEquals(new Short((short) -10), valueOf("-10", short.class, "0"));
-		assertEquals(new Short((short) 0), valueOf(null, Short.class, "0"));
-		assertEquals(new Short((short) 10), valueOf("10", Short.class, "0"));
-		assertEquals(new Short((short) -10), valueOf("-10", Short.class, "0"));
+		assertEquals(Short.valueOf((short) 0), valueOf(null, short.class, "0"));
+		assertEquals(Short.valueOf((short) 10), valueOf("10", short.class, "0"));
+		assertEquals(Short.valueOf((short) -10), valueOf("-10", short.class, "0"));
+		assertEquals(Short.valueOf((short) 0), valueOf(null, Short.class, "0"));
+		assertEquals(Short.valueOf((short) 10), valueOf("10", Short.class, "0"));
+		assertEquals(Short.valueOf((short) -10), valueOf("-10", Short.class, "0"));
 		
-		assertEquals(new Integer(0), valueOf(null, int.class, "0"));
-		assertEquals(new Integer(10), valueOf("10", int.class, "0"));
-		assertEquals(new Integer(-10), valueOf("-10", int.class, "0"));
-		assertEquals(new Integer(0), valueOf(null, Integer.class, "0"));
-		assertEquals(new Integer(10), valueOf("10", Integer.class, "0"));
-		assertEquals(new Integer(-10), valueOf("-10", Integer.class, "0"));
+		assertEquals(Integer.valueOf(0), valueOf(null, int.class, "0"));
+		assertEquals(Integer.valueOf(10), valueOf("10", int.class, "0"));
+		assertEquals(Integer.valueOf(-10), valueOf("-10", int.class, "0"));
+		assertEquals(Integer.valueOf(0), valueOf(null, Integer.class, "0"));
+		assertEquals(Integer.valueOf(10), valueOf("10", Integer.class, "0"));
+		assertEquals(Integer.valueOf(-10), valueOf("-10", Integer.class, "0"));
 		
-		assertEquals(new Long(0), valueOf(null, long.class, "0"));
-		assertEquals(new Long(10), valueOf("10", long.class, "0"));
-		assertEquals(new Long(-10), valueOf("-10", long.class, "0"));
-		assertEquals(new Long(0), valueOf(null, Long.class, "0"));
-		assertEquals(new Long(10), valueOf("10", Long.class, "0"));
-		assertEquals(new Long(-10), valueOf("-10", Long.class, "0"));
+		assertEquals(Long.valueOf(0), valueOf(null, long.class, "0"));
+		assertEquals(Long.valueOf(10), valueOf("10", long.class, "0"));
+		assertEquals(Long.valueOf(-10), valueOf("-10", long.class, "0"));
+		assertEquals(Long.valueOf(0), valueOf(null, Long.class, "0"));
+		assertEquals(Long.valueOf(10), valueOf("10", Long.class, "0"));
+		assertEquals(Long.valueOf(-10), valueOf("-10", Long.class, "0"));
 	}
 	
 	@Test
@@ -58,32 +58,32 @@ public class TypeUtilsTest
 	@Test
 	public void testCastNumber() throws Exception
 	{
-		assertEquals(0, castNumber(new Byte((byte) 0), Byte.class));
-		assertEquals(10, castNumber(new Byte((byte) 10), Byte.class));
-		assertEquals(-10, castNumber(new Byte((byte) -10), Byte.class));
-		assertEquals(0, castNumber(new Byte((byte) 0), Byte.class));
-		assertEquals(10, castNumber(new Byte((byte) 10), Byte.class));
-		assertEquals(-10, castNumber(new Byte((byte) -10), Byte.class));
+		assertEquals(0, castNumber(Byte.valueOf((byte) 0), Byte.class));
+		assertEquals(10, castNumber(Byte.valueOf((byte) 10), Byte.class));
+		assertEquals(-10, castNumber(Byte.valueOf((byte) -10), Byte.class));
+		assertEquals(0, castNumber(Byte.valueOf((byte) 0), Byte.class));
+		assertEquals(10, castNumber(Byte.valueOf((byte) 10), Byte.class));
+		assertEquals(-10, castNumber(Byte.valueOf((byte) -10), Byte.class));
 		
-		assertEquals(0, castNumber(new Short((short) 0), Short.class));
-		assertEquals(10, castNumber(new Short((short) 10), Short.class));
-		assertEquals(-10, castNumber(new Short((short) -10), Short.class));
-		assertEquals(0, castNumber(new Short((short) 0), Short.class));
-		assertEquals(10, castNumber(new Short((short) 10), Short.class));
-		assertEquals(-10, castNumber(new Short((short) -10), Short.class));
+		assertEquals(0, castNumber(Short.valueOf((short) 0), Short.class));
+		assertEquals(10, castNumber(Short.valueOf((short) 10), Short.class));
+		assertEquals(-10, castNumber(Short.valueOf((short) -10), Short.class));
+		assertEquals(0, castNumber(Short.valueOf((short) 0), Short.class));
+		assertEquals(10, castNumber(Short.valueOf((short) 10), Short.class));
+		assertEquals(-10, castNumber(Short.valueOf((short) -10), Short.class));
 		
-		assertEquals(0, castNumber(new Integer(0), Integer.class));
-		assertEquals(10, castNumber(new Integer(10), Integer.class));
-		assertEquals(-10, castNumber(new Integer(-10), Integer.class));
-		assertEquals(0, castNumber(new Integer(0), Integer.class));
-		assertEquals(10, castNumber(new Integer(10), Integer.class));
-		assertEquals(-10, castNumber(new Integer(-10), Integer.class));
+		assertEquals(0, castNumber(Integer.valueOf(0), Integer.class));
+		assertEquals(10, castNumber(Integer.valueOf(10), Integer.class));
+		assertEquals(-10, castNumber(Integer.valueOf(-10), Integer.class));
+		assertEquals(0, castNumber(Integer.valueOf(0), Integer.class));
+		assertEquals(10, castNumber(Integer.valueOf(10), Integer.class));
+		assertEquals(-10, castNumber(Integer.valueOf(-10), Integer.class));
 		
-		assertEquals(0, castNumber(new Long(0), Long.class));
-		assertEquals(10, castNumber(new Long(10), Long.class));
-		assertEquals(-10, castNumber(new Long(-10), Long.class));
-		assertEquals(0, castNumber(new Long(0), Long.class));
-		assertEquals(10, castNumber(new Long(10), Long.class));
-		assertEquals(-10, castNumber(new Long(-10), Long.class));
+		assertEquals(0, castNumber(Long.valueOf(0), Long.class));
+		assertEquals(10, castNumber(Long.valueOf(10), Long.class));
+		assertEquals(-10, castNumber(Long.valueOf(-10), Long.class));
+		assertEquals(0, castNumber(Long.valueOf(0), Long.class));
+		assertEquals(10, castNumber(Long.valueOf(10), Long.class));
+		assertEquals(-10, castNumber(Long.valueOf(-10), Long.class));
 	}
 }
